# toffee-test

./: .gitignore  README.md  README_zh.md  pyproject.toml
toffee_test/: __init__.py  markers.py  plugin.py  reporter.py  request.py  testcase.py  utils.py
toffee_test/templates/html/: index.html  module.html  style.css  test.html  toffee.html
toffee_test/utils/: __init__.py  uncovered.py
toffee_test/utils/verilator_coverage/: __init__.py  models.py  processor.py
